--- a/myapp/src/app/main/main.component.css
+++ b/myapp/src/app/main/main.component.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Slabo+13px|Suez+13px||Ultra");
 html, body {
   width: 100%;
   height: 100%;
@@ -24,585 +23,234 @@ html, body {
     -webkit-transform: translateX(30px);
     transform: translateX(30px);
     font-style: italic; } }
-#menu {
-  position: static;
-  height: 80%;
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  font-size: .5em; }
-  #menu table {
-    border-collapse: collapse;
-    text-align: center; }
-  #menu table tr {
-    height: auto; }
-  #menu table td {
-    width: 33.333%; }
-    #menu table td a {
-      padding-left: 5%;
-      padding-right: 0;
-      position: relative;
-      bottom: 13px;
-      right: 5px;
-      background-color: #ffa117;
-      width: 100%;
-      font-size: 1.5em;
-      letter-spacing: .2em;
-      text-decoration: none;
-      opacity: .9;
-      color: black; }
-
-div#menu_button {
-  text-align: center;
-  width: 90%;
-  height: auto;
-  color: #333333;
-  font-size: 4em;
-  font-weight: lighter;
-  letter-spacing: .2em;
-  margin-right: auto;
-  margin-left: auto;
-  border-bottom: solid;
-  bottom: 0px;
-  border-width: 1px; }
-
-div#menu_button_flip {
-  text-align: center;
-  width: 90%;
-  height: auto;
-  color: #333333;
-  font-size: 4em;
-  font-weight: lighter;
-  letter-spacing: .2em;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 3%;
-  border-top: solid;
-  border-width: 1px; }
-
-div#seattle_based_slogan {
-  margin-top: 45%;
-  display: block;
-  text-align: center;
-  height: auto;
-  padding-top: auto;
-  padding-bottom: auto; }
-  div#seattle_based_slogan h3 {
-    font-family: 'Ultra', serif;
-    padding-bottom: 0;
-    font-size: 2.7em;
-    opacity: .7; }
-  div#seattle_based_slogan p {
-    color: #ffa117;
-    letter-spacing: .8px; }
-  div#seattle_based_slogan img#seattle_skyline {
-    margin-top: 45%;
-    height: auto;
-    width: 100%;
-    opacity: .15;
-    display: block;
-    -moz-box-shadow: inset 0 0 100px #ffffff;
-    -webkit-box-shadow: inset 0 0 100px #ffffff;
-    box-shadow: inset 0 0 100px #ffffff; }
-  div#seattle_based_slogan img#seattle_skyline_active {
-    opacity: 0.8;
-    transition: opacity .25s ease-in-out;
-    -moz-transition: opacity .25s ease-in-out;
-    -webkit-transition: opacity .25s ease-in-out; }
-
-video#detect_lanes {
-  margin-top: 5%;
-  height: auto;
-  opacity: .5;
-  display: block; }
-
-span#video_caption {
-  float: right;
-  margin-right: 3%;
-  margin-top: .5%;
-  font-weight: bold;
-  font-size: .7em;
-  text-align: right;
-  padding-right: -25%; }
-
-div#tanner_card {
-  width: 100%;
-  height: 10%;
-  text-align: right;
-  color: white;
-  font-size: 2em;
-  background-color: #ffa117;
-  background-size: contain;
-  background-repeat: no-repeat;
-  box-shadow: inset 0 0 10px #ffffff; }
-  div#tanner_card img {
-    position: relative;
-    width: auto;
-    height: 160%;
-    top: -60%;
-    right: -5%;
-    display: block;
-    bottom: 10%;
-    z-index: 0; }
-  div#tanner_card p#portfolio {
-    position: relative;
-    width: auto;
-    height: auto;
-    font-weight: bold;
-    font-size: 1.3em;
-    bottom: 150%;
-    right: 10%;
-    animation: move-the-object 1s infinite; }
-
-div#about_section {
-  height: 100%;
-  background: white url("../../assets/medias/running.png");
-  background-position: left;
-  background-size: auto 100%;
-  background-repeat: no-repeat; }
-  div#about_section div {
-    background: linear-gradient(black, #5e5e5e);
-    opacity: .7;
-    width: auto; }
-  div#about_section h2 {
-    font-size: 5em;
-    display: block;
-    width: 50%;
-    position: relative;
-    color: #ffa117;
-    left: 10%;
-    top: -90%; }
-  div#about_section p {
-    position: relative;
-    left: 10%;
-    top: -90%;
-    padding-bottom: 20%;
-    color: white;
-    width: 80%;
-    height: auto;
-    z-index: 3;
-    font-size: 1em; }
-
-@media (min-width: 750px) {
-  #menu {
-    position: static;
-    height: 80%;
-    width: 90%;
-    margin-right: auto;
-    margin-left: auto;
-    font-size: .5em; }
-    #menu table {
-      border-collapse: collapse;
-      text-align: center; }
-    #menu table tr {
-      height: auto; }
-    #menu table td {
-      width: 33.333%; }
-      #menu table td a {
-        position: relative;
-        bottom: 30px;
-        right: 20px;
-        background-color: #ffa117;
-        width: 100%;
-        font-size: 2em;
-        letter-spacing: .5em;
-        text-decoration: none;
-        opacity: .9;
-        color: black; }
-
-  div#seattle_based_slogan h3 {
-    font-size: 5em; }
-  div#seattle_based_slogan p {
-    font-size: 2em; }
-
-  img#seattle_skyline {
-    margin-top: 50%;
-    height: auto;
-    width: 100%;
-    opacity: .1;
-    display: block;
-    filter: grayscale(100%);
-    -moz-box-shadow: inset 0 0 100px #ffffff;
-    -webkit-box-shadow: inset 0 0 100px #ffffff;
-    box-shadow: inset 0 0 100px #ffffff; }
-
-  div#about_section {
-    height: 100%;
-    background: white url("../../assets/medias/running.png");
-    background-position: left;
-    background-size: 100% auto;
-    background-repeat: no-repeat; }
-    div#about_section div {
-      background: linear-gradient(black, #5e5e5e);
-      opacity: .7;
-      width: auto; }
-    div#about_section h2 {
-      font-size: 6em;
-      display: block;
-      width: 50%;
-      position: relative;
-      color: #ffa117;
-      left: 10%;
-      top: -85%; }
-    div#about_section p {
-      position: relative;
-      left: 10%;
-      top: -85%;
-      padding-bottom: 20%;
-      color: white;
-      width: 55%;
-      height: auto;
-      z-index: 3;
-      font-size: 1.2em; } }
 @media (orientation: landscape) {
-  #menu {
-    position: static;
-    height: 80%;
-    width: 90%;
-    margin-right: auto;
-    margin-left: auto;
-    font-size: .5em; }
-    #menu table {
-      border-collapse: collapse;
-      text-align: center; }
-    #menu table tr {
-      height: auto; }
-    #menu table td {
-      width: 33.333%; }
-      #menu table td a {
-        position: relative;
-        bottom: 35px;
-        right: 20px;
-        background-color: #ffa117;
-        width: 100%;
-        font-size: 2em;
-        letter-spacing: .5em;
-        text-decoration: none;
-        opacity: .9;
-        color: black; }
-
-  div#seattle_based_slogan h3 {
-    font-size: 5em; }
-  div#seattle_based_slogan p {
-    font-size: 2em; }
-
-  div#tanner_card {
-    padding-top: 10px;
+  h1 {
+    filter: grayscale(0.1) blur(0.5px);
+    color: whitesmoke;
+    position: absolute;
     width: 100%;
+    text-align: center;
+    opacity: .6;
+    font-size: 4em;
+    display: block;
+    top: 9%;
+    letter-spacing: 10px; }
+
+  #seattle_based_slogan {
+    filter: grayscale(0.2) blur(6px);
     height: 20%;
-    text-align: right;
-    color: white;
-    font-size: 2em;
-    background-color: #ffa117;
-    background-size: contain;
+    width: auto;
+    background-image: url(../../assets/medias/seattle_skyline.png);
+    background-blend-mode: overlay;
+    background-size: 100% auto;
     background-repeat: no-repeat;
-    box-shadow: inset 0 0 10px #ffffff; }
-    div#tanner_card img {
+    background-position: 50% 70%;
+    opacity: .5; }
+
+  #banner-text {
+    height: auto;
+    text-align: center;
+    position: absolute; }
+    #banner-text h1 {
+      line-height: 80%;
+      filter: grayscale(0.5) blur(0px);
+      font-size: 12em;
+      opacity: .7; }
+
+  #lane_detection {
+    height: 35%;
+    opacity: .7;
+    display: block; }
+
+  #tanner_card {
+    width: 100%;
+    height: 10%;
+    text-align: right;
+    color: #ffa117;
+    font-size: 3em;
+    background-color: #dcdcdc;
+    background-size: contain;
+    background-repeat: no-repeat; }
+    #tanner_card img {
       position: relative;
       width: auto;
-      height: 140%;
-      top: -40%;
+      height: 180%;
+      top: -80%;
       right: -10%;
       display: block;
       bottom: 10%;
       z-index: 0; }
-    div#tanner_card p#portfolio {
-      cursor: default;
+    #tanner_card #portfolio {
+      cursor: pointer;
+      display: block;
       position: relative;
       width: auto;
       height: auto;
       font-weight: bold;
-      font-size: 2em;
-      top: -110%;
-      right: 10%;
+      font-size: 1em;
+      top: -150%;
+      right: 8%;
       animation: move-the-object 1s infinite; }
 
-  div#about_section {
+  #about_section {
     width: 100%;
-    background: white url("../../assets/medias/running.png");
-    background-position: center;
+    height: 80%;
+    background: #1d4e41 url("../../assets/medias/running.png");
     background-size: 100% auto;
+    background-position: 40% 90%;
     background-repeat: no-repeat; }
-    div#about_section div {
+    #about_section div {
       background: linear-gradient(black, #5e5e5e);
       opacity: .7;
       width: auto; }
-    div#about_section h2 {
-      font-size: 6em;
+    #about_section h2 {
+      font-size: 3em;
       display: block;
       width: 50%;
       position: relative;
       color: #ffa117;
-      left: 10%;
-      top: -80%; }
-    div#about_section p {
-      position: relative;
-      left: 10%;
-      top: -80%;
-      padding-bottom: 20%;
-      color: white;
-      width: 45%;
-      height: auto;
-      z-index: 3;
-      font-size: 1.5em; } }
-@media (orientation: landscape) and (max-width: 750px) {
-  div#about_section {
-    height: 100%;
-    background: white url("../../assets/medias/running.png");
-    background-position: left;
-    background-size: 100% auto;
-    background-repeat: no-repeat; }
-    div#about_section div {
-      background: linear-gradient(black, #5e5e5e);
       opacity: .7;
-      width: auto; }
-    div#about_section h2 {
-      font-size: 6em;
-      display: block;
-      width: 50%;
-      position: relative;
-      color: #ffa117;
-      left: 10%;
+      left: 5%;
       top: -87%; }
-    div#about_section p {
+    #about_section p {
       position: relative;
-      left: 10%;
-      top: -90%;
+      left: 5%;
+      top: -88%;
       padding-bottom: 20%;
       color: white;
-      width: 75%;
+      width: 45%;
       height: auto;
       z-index: 3;
-      font-size: .9em; } }
-@media (min-width: 1441px) {
-  #menu {
-    position: static;
-    height: 80%;
-    width: 90%;
-    margin-right: auto;
-    margin-left: auto;
-    font-size: .5em; }
-    #menu table {
-      border-collapse: collapse;
-      text-align: center; }
-    #menu table tr {
-      height: auto; }
-    #menu table td {
-      width: 33.333%; }
-      #menu table td a {
-        padding: 1%;
-        padding-right: 0;
-        position: relative;
-        bottom: 35px;
-        right: 20px;
-        background-color: #ffa117;
-        width: 100%;
-        font-size: 3em;
-        letter-spacing: .3em;
-        text-decoration: none;
-        opacity: .9;
-        color: black; }
+      font-size: .9em; }
 
-  div#seattle_based_slogan h3 {
-    font-size: 8em;
-    opacity: .7; }
-  div#seattle_based_slogan p {
-    font-weight: lighter;
-    font-size: 3em; }
+  #footer {
+    opacity: .8;
+    width: 100%;
+    height: 6%;
+    text-align: center;
+    padding: .5%; }
+    #footer a {
+      text-decoration: none; }
+      #footer a .social_icon {
+        width: auto;
+        height: 90%; }
+    #footer p {
+      font-size: .6em; } }
+@media (orientation: portrait) {
+  h1 {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    color: whitesmoke;
+    opacity: .8;
+    font-size: 2.6em;
+    display: block;
+    top: 17%; }
 
-  div#tanner_card {
+  #seattle_based_slogan {
+    filter: grayscale(0.2) blur(3px);
+    mix-blend-mode: #ffa117;
+    background-blend-mode: overlay;
+    opacity: .5;
+    text-align: center;
+    width: auto;
+    height: 25%;
+    background-image: url(../../assets/medias/seattle_skyline.png);
+    background-position: 50% 100%;
+    background-repeat: no-repeat;
+    background-size: 160% 110%; }
+
+  #banner-text {
+    position: absolute;
+    text-align: center; }
+    #banner-text h1 {
+      line-height: 80%;
+      color: #ffa117;
+      font-size: 30em; }
+
+  #lane_detection {
+    height: 35%;
+    opacity: .7;
+    display: block; }
+
+  #tanner_card {
     padding-top: 10px;
     width: 100%;
-    height: 20%;
+    height: 10%;
     text-align: right;
-    color: white;
+    color: #ffa117;
     font-size: 2em;
-    background-color: #ffa117;
+    background-color: #dcdcdc;
     background-size: contain;
-    background-repeat: no-repeat;
-    box-shadow: inset 0 0 10px #ffffff; }
-    div#tanner_card img {
+    background-repeat: no-repeat; }
+    #tanner_card img {
       position: relative;
       width: auto;
-      height: 140%;
-      top: -40%;
-      right: -10%;
+      height: 240%;
+      top: -140%;
+      left: 10%;
       display: block;
       bottom: 10%;
       z-index: 0; }
-    div#tanner_card p#portfolio {
+    #tanner_card #portfolio {
+      cursor: pointer;
+      display: block;
       position: relative;
       width: auto;
       height: auto;
       font-weight: bold;
-      font-size: 4em;
-      top: -110%;
+      font-size: 90%;
+      top: -300%;
       right: 10%;
       animation: move-the-object 1s infinite; }
 
-  div#about_section {
+  #about_section {
     width: 100%;
     background: white url("../../assets/medias/running.png");
     background-position: center;
-    background-size: 100% auto;
+    background-size: auto 100%;
     background-repeat: no-repeat; }
-    div#about_section div {
+    #about_section div {
       background: linear-gradient(black, #5e5e5e);
       opacity: .7;
       width: auto; }
-    div#about_section h2 {
-      font-size: 9em;
+    #about_section h2 {
+      font-size: 5em;
       display: block;
       width: 50%;
       position: relative;
       color: #ffa117;
       left: 10%;
       top: -80%; }
-    div#about_section p {
+    #about_section p {
       position: relative;
       left: 10%;
       top: -80%;
       padding-bottom: 20%;
       color: white;
-      width: 45%;
+      width: 85%;
       height: auto;
       z-index: 3;
-      font-size: 2em; } }
-@media (max-width: 425px) {
-  div#footer {
-    display: inline-block;
-    position: fixed;
-    bottom: 0;
+      font-size: 1.1em; }
+
+  #footer {
+    position: static;
+    margin-top: 2%;
+    opacity: .8;
     width: 100%;
-    height: 13%;
-    color: white;
-    text-align: center;
-    background-color: white;
-    opacity: .9; }
-    div#footer span#socialmedia {
-      height: auto;
-      width: auto;
-      margin-right: auto;
-      margin-left: auto; }
-    div#footer a {
+    height: auto;
+    text-align: center; }
+    #footer a {
+      padding: .5%;
       text-decoration: none; }
-      div#footer a img#social_icon {
-        margin-top: 3%;
-        width: auto;
-        height: 45%;
-        opacity: .7; }
-    div#footer p {
-      text-align: center;
-      color: #ffa117;
-      font-size: .5em;
-      letter-spacing: 2px; } }
-@media (max-width: 425px) and (orientation: landscape) {
-  div#footer {
-    width: 100%;
-    height: 20%; }
-    div#footer a {
-      text-decoration: none; }
-      div#footer a img#social_icon {
-        width: auto;
-        height: 30%; }
-    div#footer p {
-      font-size: .6em; } }
-@media (min-width: 426px) and (max-width: 750px) {
-  div#footer {
-    display: inline-block;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 13%;
-    color: white;
-    text-align: center;
-    background-color: white;
-    opacity: .9; }
-    div#footer span#socialmedia {
-      height: auto;
-      width: auto;
-      margin-right: auto;
-      margin-left: auto; }
-    div#footer a {
-      text-decoration: none; }
-      div#footer a img#social_icon {
-        margin-top: 1%;
-        width: auto;
-        height: 40%;
-        opacity: .8; }
-    div#footer p {
-      text-align: center;
-      color: #ffa117;
-      font-size: .8em;
-      letter-spacing: 3px; } }
-@media (min-width: 426px) and (max-width: 750px) and (orientation: landscape) {
-  div#footer {
-    background-color: white;
-    width: 100%;
-    height: 15%; }
-    div#footer a {
-      text-decoration: none; }
-      div#footer a img#social_icon {
-        margin-top: 1%;
-        height: 45%;
-        width: auto; }
-    div#footer p {
-      font-size: 1em; } }
-@media (min-width: 751px) and (max-width: 1441px) {
-  div#footer {
-    display: inline-block;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 15%;
-    color: white;
-    text-align: center;
-    background-color: white;
-    opacity: .9; }
-    div#footer span#socialmedia {
-      height: auto;
-      width: auto;
-      margin-right: auto;
-      margin-left: auto; }
-    div#footer a {
-      text-decoration: none; }
-      div#footer a img#social_icon {
-        margin-top: 1%;
-        width: auto;
-        height: 50%;
-        opacity: .7; }
-    div#footer p {
-      text-align: center;
-      color: #ffa117;
-      font-size: 1.2em;
-      letter-spacing: 3px; } }
-@media (min-width: 1442px) {
-  div#footer {
-    display: inline-block;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 15%;
-    color: white;
-    text-align: center;
-    background-color: white;
-    opacity: .9; }
-    div#footer span#socialmedia {
-      height: auto;
-      width: auto;
-      margin-right: auto;
-      margin-left: auto; }
-    div#footer a {
-      text-decoration: none; }
-      div#footer a img#social_icon {
-        margin-top: 1%;
-        width: auto;
-        height: 50%;
-        opacity: .7; }
-    div#footer p {
-      text-align: center;
-      color: #ffa117;
-      font-size: 1.4em;
-      letter-spacing: 3px; } }
+      #footer a .social_icon {
+        width: 8%;
+        height: auto; }
+    #footer p {
+      font-size: .8em; } }
+@media (orientation: portrait) and (max-width: 750px) {
+  h1 {
+    font-size: 1.5em;
+    top: 20%; } }
 
 /*# sourceMappingURL=main.component.css.map */
