--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -37,13 +37,13 @@
 </div>-->
 <div id="seattle_based_slogan">
 </div>
+<h1> Design &middot; Code &middot; Create</h1>
 <span id="banner-text">
-  <h1> S.E. </h1>
 </span>
 <img id="lane_detection" src="../../assets/medias/lane_detection.gif">
 <div id="tanner_card">
   <img src="../../assets/medias/me_standing.png">
-  <p id="portfolio" (click)="click_portfolio()"> Portfolio</p>
+  <a id="portfolio" (click)="click_portfolio()"> Portfolio</a>
 </div>
 <div id="about_section">
   <div>
@@ -62,16 +62,16 @@
 <div id="footer">
 <span id="socialmedia">
 <a href='https://www.linkedin.com/in/tanner-phan-b70999aa/' target='_top'>
-<img id="social_icon" src="assets/medias/linkedin_blk.png">
+<img class="social_icon" src="assets/medias/linkedin_blk.png">
 </a>
 <a href='https://twitter.com/tannerphan?lang=en' target='_top'>
-<img id="social_icon" src="assets/medias/twitter.png">
+<img class="social_icon" src="assets/medias/twitter.png">
 </a>
 <a href='https://www.instagram.com/tann3rphan/' target='_top'>
-<img id="social_icon" src="assets/medias/instagram.png">
+<img class="social_icon" src="assets/medias/instagram.png">
 </a>
 <a href='https://github.com/tannerP' target='_top'>
-<img id="social_icon" src="assets/medias/github.png">
+<img class="social_icon" src="assets/medias/github_blk.png">
 </a>
 </span>
   <p> &copy; Tanner Phan 2017</p>
